# OllinAI-

./: .eslintrc.json  .gitignore  .gitleaks.toml  .vercelignore  README.md  TESTING.md  eslint.config.mjs  next.config.js  ollin_logo_black.psd  ollin_logo_white  package-lock.json  package.json  pricing_strategy.md  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
agent/: Cargo.toml  Dockerfile.agent
agent/.cargo/: config.toml
agent/src/: ancestry.rs  attestation.rs  baseline.rs  buffer.rs  canary.rs  config.rs  fallback.rs  main.rs  mode.rs  residency.rs  signing.rs  telemetry.rs
agent/src/detection/: credential.rs  mod.rs
agent/src/probe/: kernel_check.rs  mod.rs
agent/src/rules/: enforcement.rs  mod.rs  parser.rs
docs/: DEPLOYMENT.md  TODO-hackathon.md  architecture-diagram.mmd  competitive-positioning.md  dashboard-metrics-guide.md  dynamodb-data-model.md  dynamodb-strategic-usage.md  hackathon-story.md  roadmap-integrations.md  structured-logging.md  video-script-guide.md
docs/architecture-decisions/: 001-nextjs-vercel.md
infra/: dynamodb-tables.ts  eventbridge-rules.ts  sqs-queues.ts
infra/terraform/: dynamodb.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  sqs.tf  terraform.tfvars.example  variables.tf  vercel_iam.tf
integrations/argocd/: ollinai-hook.yaml
integrations/azure-devops/: ollinai-task.yaml
scripts/: create-local-tables.ts  deploy-lambdas.sh  dynamodb-backup.sh  seed-demo-data.ts  seed-full-demo.mjs  send-mock-events.sh  sync-vercel-env.sh
src/: middleware.ts
(+275 files in other folders)
